--- a/Report/sections/DimensionalityReduction.tex
+++ b/Report/sections/DimensionalityReduction.tex
@@ -23,7 +23,7 @@ PCA can also be used to prevent overfitting, but it is usually better to use reg
 Figure \ref{fig:pca} shows a 3 dimensional feature space where all the data, within a small margin, lies in a 2 dimensional plane.
 PCA is used to find two vectors $u^{(1)}$ and $u^{(2)}$ which spans this 2D plane.
 
-\begin{figure}[H]
+\begin{figure}
 \centering
 \includegraphics{images/pca}
 \caption{3D to 2D PCA illustration}
@@ -101,7 +101,7 @@ S_{11} & 0 & 0 & 0 & 0 \\
 In our project we use PCA to reduce our feature space from 64 dimensions down to 40 dimensions.
 We do this to increase the speed of our learning algorithms while still retaining almost all of our data ($\geq 99.99\%$) as seen on Figure \ref{fig:pca-on-our-data}.
 
-\begin{figure}[H]
+\begin{figure}
 \centering
 \includegraphics[scale = 0.8]{images/pca-on-our-data}
 \caption{ Retained variance per dimension}
@@ -115,7 +115,7 @@ Fisher's linear discriminant is another look on dimensionality reduction. Instea
 y = \textbf{w}^T\textbf{x}
 \end{equation}
 This leads to a considerable loss in information and may cause overlapping in data that did not overlap in multidimensional space as can be see on figure \ref{fig:fisher} from the book Pattern Recognition and Machine Learning by Christopher M. Bishop\cite{bishop2006pattern}. The left Image is  the original space while the right image is in the projected space.\\
-\begin{figure}[H]
+\begin{figure}
 \centering
 \includegraphics[width=1\textwidth]{images/fisher}
 \caption{Picture from the Pattern Recognition and Machine Learning Book by Christopher M. Bishop}
