Fix authors list.

--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -13,7 +13,7 @@
 
 \author{
 	\large
-	\textsc{Rune A. Heick, Rasmus S. Reimer \& Nicolai Glud \fixme{Change authors.}}\\[2mm]
+	\textsc{Line Aggerbo, Rasmus S. Reimer \& Jonas D. Pedersen}\\[2mm]
 	\normalsize Aarhus University, Department of Engineering \\
 	\vspace{-5mm}
 }
