Add group number to report.

--- a/Report/Master.tex
+++ b/Report/Master.tex
@@ -8,7 +8,7 @@
 	\fontsize{24pt}{10pt}
 	\selectfont
 	\textbf{Speaker Recognition in non-linear signal processing and pattern recognition.
-	\fixme{Change title.}}
+	\fixme{Change title.} \vspace{5mm} \Large Group 6}
 }
 
 \author{
