Tilføjelse af overskrifter

--- a/Crustcrawler Kinematic Model/Report/Master.tex
+++ b/Crustcrawler Kinematic Model/Report/Master.tex
@@ -32,6 +32,13 @@
 %----------------------------------------------------------------------------------------
 
 \input{sections/stuff}
+\input{sections/Systembeskrivelse}
+\input{sections/Systemarkitektur}
+\input{sections/Design}
+\input{sections/Implementering}
+\input{sections/Resultater}
+\input{sections/Diskussion}
+\input{sections/Konklusion}
 
 %----------------------------------------------------------------------------------------
 %	REFERENCE LIST
