Flyttet til project mappe

--- a/Project/Report/Master.tex
+++ b/Project/Report/Master.tex
@@ -42,6 +42,13 @@ The Content of this paper seeks to present the knowledge gained throughout the n
 %----------------------------------------------------------------------------------------
 
 \input{sections/DimensionalityReduction}
+\input{sections/Systembeskrivelse}
+\input{sections/Systemarkitektur}
+\input{sections/Design}
+\input{sections/Implementering}
+\input{sections/Resultater}
+\input{sections/Diskussion}
+\input{sections/Konklusion}
 
 
 %----------------------------------------------------------------------------------------
