Fikset rundt i det

--- a/Project/Report/Master.tex
+++ b/Project/Report/Master.tex
@@ -4,29 +4,20 @@
 %----------------------------------------------------------------------------------------
 
 \title{
-	\vspace{-15mm}
-	\fontsize{24pt}{10pt}
-	\selectfont
-	\textbf{Speaker Recognition in non-linear signal processing and pattern recognition.
-	\fixme{Change title.} \vspace{5mm} \Large Group 6}
+	\textbf{Introduktion til robotprogrammering og kinematik}
 }
 
 \author{
-	\large
-	\textsc{Line Aggerbo, Rasmus S. Reimer \& Jonas D. Pedersen}\\[2mm]
-	\normalsize Aarhus University, Department of Engineering \\
-	\vspace{-5mm}
+	Line Aggerbo, Rasmus S. Reimer \& Jonas D. Pedersen\\
+	Aarhus University School of Engineering \\
 }
-\date{}
+\date{\today}
 
 %----------------------------------------------------------------------------------------
 
 \begin{document}
 
 \maketitle
-\thispagestyle{fancy} % All pages have headers and footers
-\raggedright
-
 
 %----------------------------------------------------------------------------------------
 %	ABSTRACT
@@ -38,17 +29,14 @@ The Content of this paper seeks to present the knowledge gained throughout the n
 
 
 %----------------------------------------------------------------------------------------
-%	ARTICLE CONTENTS
+%	REPORT CONTENTS
 %----------------------------------------------------------------------------------------
 
-\input{sections/DimensionalityReduction}
-\input{sections/Systembeskrivelse}
-\input{sections/Systemarkitektur}
-\input{sections/Design}
-\input{sections/Implementering}
-\input{sections/Resultater}
-\input{sections/Diskussion}
-\input{sections/Konklusion}
+\input{sections/Introduktion/Introduktion}
+\input{sections/Systembeskrivelse/Systembeskrivelse}
+\input{sections/Test/Test}
+\input{sections/Diskussion/Diskussion}
+\input{sections/Konklusion/Konklusion}
 
 
 %----------------------------------------------------------------------------------------
