--- a/Project/Report/Master.tex
+++ b/Project/Report/Master.tex
@@ -19,6 +19,7 @@
 
 \maketitle
 
+\clearpage
 %----------------------------------------------------------------------------------------
 %	ABSTRACT
 %----------------------------------------------------------------------------------------
@@ -27,6 +28,7 @@
 The Content of this paper seeks to present the knowledge gained throughout the non-linear signal processing and pattern recognition course from Aarhus University, department of engineering. The paper is split into multiple sections explaining the data used in the paper, the methods used to process the data and the methods used for categorising the data. The results are presented along with a discussion of the results. \fixme{Rewrite the abstract}
 \end{abstract}
 
+\clearpage
 
 %----------------------------------------------------------------------------------------
 %	REPORT CONTENTS
