--- a/Project/Report/preamble.tex
+++ b/Project/Report/preamble.tex
@@ -1,3 +1,5 @@
+%!TEX root = Master.tex
+
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
@@ -10,11 +12,5 @@
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{geometry}
 \usepackage{caption}
-
-\usepackage{algpseudocode}
-\usepackage{algorithmicx}
-\usepackage[ruled]{algorithm}
-\usepackage{algpascal}
-\usepackage{algc}
 
 \setlength{\parindent}{0cm}
