--- a/Project/Report/sections/Systembeskrivelse/Systembeskrivelse.tex
+++ b/Project/Report/sections/Systembeskrivelse/Systembeskrivelse.tex
@@ -1,2 +1,6 @@
-%!TEX root = ..\Master.tex
+%!TEX root = ../../Master.tex
+\clearpage
 \section{Systembeskrivelse}
+
+\input{sections/Systembeskrivelse/Hardware}
+\input{sections/Systembeskrivelse/Software}
