--- a/Project/Report/sections/Test/Test.tex
+++ b/Project/Report/sections/Test/Test.tex
@@ -1,2 +1,5 @@
-%!TEX root = ..\Master.tex
-\section{Systemarkitektur}
+%!TEX root = ../../Master.tex
+\clearpage
+\section{Test}
+\input{sections/Test/KlodsIdentifikationsTest}
+\input{sections/Test/Systemtest}
