--- a/Project/Report/Master.tex
+++ b/Project/Report/Master.tex
@@ -3,14 +3,10 @@
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
 
-\title{
-	\textbf{Introduktion til robotprogrammering og kinematik}
-}
+\title{ \textbf{Introduktion til robotprogrammering og kinematik} }
 
-\author{
-	Line Aggerbo, Rasmus S. Reimer \& Jonas D. Pedersen\\
-	Aarhus University School of Engineering \\
-}
+\author{ Line Aggerbo, Rasmus S. Reimer \& Jonas D. Pedersen\\
+	Aarhus University School of Engineering}
 \date{\today}
 
 %----------------------------------------------------------------------------------------
@@ -25,8 +21,11 @@
 %----------------------------------------------------------------------------------------
 
 \begin{abstract}
-The Content of this paper seeks to present the knowledge gained throughout the non-linear signal processing and pattern recognition course from Aarhus University, department of engineering. The paper is split into multiple sections explaining the data used in the paper, the methods used to process the data and the methods used for categorising the data. The results are presented along with a discussion of the results. \fixme{Rewrite the abstract}
+\fixme{Rewrite the abstract}
+The Content of this paper seeks to present the knowledge gained throughout the non-linear signal processing and pattern recognition course from Aarhus University, department of engineering. The paper is split into multiple sections explaining the data used in the paper, the methods used to process the data and the methods used for categorising the data. The results are presented along with a discussion of the results.
 \end{abstract}
+
+\tableofcontents
 
 \clearpage
 
