--- a/Project/Report/preamble.tex
+++ b/Project/Report/preamble.tex
@@ -12,5 +12,6 @@
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{geometry}
 \usepackage{caption}
+\usepackage[utf8]{inputenc}
 
 \setlength{\parindent}{0cm}
