Added file 'Purpose' and wrote Introduktion and Formål

--- a/Project/Report/sections/Introduktion/Introduktion.tex
+++ b/Project/Report/sections/Introduktion/Introduktion.tex
@@ -2,5 +2,8 @@
 \clearpage
 \section{Introduktion}
 
+Denne rapport beskriver projektarbejdet som er udført, som en del af faget 'Introduktion til robotprogrammering og kinematik' (ITROB1) ved Ingeniør Højskolen Aarhus Universitet. Rapporten gennemgår formålet med projektet samt de løsninger, som der igennem projektarbejdet er fundet frem til. De udførte test af systemet, diskussionen af disse og en konklusion på projektet er også at finde i denne rapport.
+
+\input{sections/Introduktion/Purpose}
 \input{sections/Introduktion/CrustCrawler}
 \input{sections/Introduktion/ROS}
