Started on Introduktion/CrustCrawler section

--- a/Project/Report/sections/Introduktion/CrustCrawler.tex
+++ b/Project/Report/sections/Introduktion/CrustCrawler.tex
@@ -1,2 +1,14 @@
 %!TEX root = ../../Master.tex
 \subsection{CrustCrawler}
+
+AX-12A Smart Robotic Arm er den robot, som universitetet har stillet til rådighed til dette projekt. Robotten er designet som en arm med en baserotation, en skulderrotation, en underarmsrotation samt en håndledsrotation. Desuden er der monteret i gripper for enden af armen, som gør det muligt at samle ting op. \\
+
+\fixme{Ændre 'Figure' til 'Figur'}
+
+\begin{figure}[h]
+\centering
+\includegraphics[scale=0.50]{images/crustCrawler}
+\caption{AX-12A Smart Robotic Arm fra CrustCrawler Robotics}
+\label{fig:crustcrawler}
+\end{figure}
+
