HW section done, added points in diskussion

--- a/Project/Report/sections/Diskussion/Diskussion.tex
+++ b/Project/Report/sections/Diskussion/Diskussion.tex
@@ -1,3 +1,12 @@
 %!TEX root = ../../Master.tex
 \clearpage
 \section{Diskussion}
+
+Designvalg
+
+ - Tag et billede og gå ud fra det vs. at bruge kamera efter hver klods
+
+Forbedringer
+
+ - Vi ved ikke om vi får fat i klodsen, det man kunne gøre var at tilføj tryksensor, så man kan mærke om man har fat i klodsen eller kigge på belastningen af nogle af motorene, da de vil være mere belastede, hvis robotten bærer en klods.
+ - 
