--- a/Project/Report/sections/Systembeskrivelse/Systembeskrivelse.tex
+++ b/Project/Report/sections/Systembeskrivelse/Systembeskrivelse.tex
@@ -2,5 +2,6 @@
 \clearpage
 \section{Systembeskrivelse}
 
+Det samlede system består af både hardware og software komponenter, som vil blive beskrevet i dette afsnit.
 \input{sections/Systembeskrivelse/Hardware}
 \input{sections/Systembeskrivelse/Software}
