--- a/Project/Report/sections/Introduktion/ROS.tex
+++ b/Project/Report/sections/Introduktion/ROS.tex
@@ -1,2 +1,5 @@
 %!TEX root = ../../Master.tex
 \subsection{ROS}
+ROS eller Robot Operating System er et framework med opensource-biblioteker til programmering af robotter af alle afskygninger. Der er ligeledes computer-vision værktøjer der gør det muligt at nemt og indkorporere kamera inputs, til identifikation og lokalisering af objekter. Det er dette operativsystem der anvendes, sammen med et webkamera, til at kontrollere CrustCrawler armen. 
+\newline
+Frameworket bygger på en Publisher/Subscriber struktur. System "nodes" er i stand til at sende beskeder imellem hinanden ved at enten publishe/subscribe på topics. En node som er interesseret i en bestemt datainformation vil subscribe på det topic som indeholder den ønskede information.
