Preamble: Inserted to display code better Systembeskrivelse: Started intro

--- a/Project/Report/preamble.tex
+++ b/Project/Report/preamble.tex
@@ -13,5 +13,19 @@
 \usepackage{geometry}
 \usepackage{caption}
 \usepackage[utf8]{inputenc}
+\usepackage{listings}
+\usepackage{courier}
+
+\lstset{
+basicstyle=\footnotesize\ttfamily,
+frame=tb,
+columns=fullflexible,
+showstringspaces=false,
+captionpos=b,
+belowskip=10pt,
+aboveskip=20pt,
+abovecaptionskip=5pt
+}
+
 
 \setlength{\parindent}{0cm}
