Jonas rapportdel, udkast

--- a/Project/Report/sections/Systembeskrivelse/Software.tex
+++ b/Project/Report/sections/Systembeskrivelse/Software.tex
@@ -8,4 +8,5 @@ Systemet består ligeledes af et antal softwarekomponenter. I dette afsnit beskr
 
 \input{sections/Systembeskrivelse/Block}
 
+\input{sections/Systembeskrivelse/Crustcrawler}
 % subsection software (end)
