--- a/Project/Report/sections/Diskussion/Diskussion.tex
+++ b/Project/Report/sections/Diskussion/Diskussion.tex
@@ -1,6 +1,17 @@
 %!TEX root = ../../Master.tex
 \clearpage
 \section{Diskussion}
+Det designede system har vist at det koncept som er forsøgt udviklet er muligt. Systemet er i stand til at tage et billede, registrere objekterne på bordet og afgøre om det er klodser som skal sorteres. Derefter er det i stand til at navigere til centrum af klodsen, rotere sin gripper og samle klodsen op, for derefter at sortere den i den specificerede side.\\
+
+Dog er der i den valgte løsning visse fejlkilder som kan optræde. Da det er besluttet at der altid startes med at tage et billede af bordet og der derefter foretages billedbehandling betyder det at systemet er meget følsom over for ændringer i klods positioner efter det billedet er taget. Som en løsning på det ville det være muligt at vælge en løsning hvor der tages billede efter hver sorteret klods. Dette vil gøre udførselstiden for opgaven betydeligt længere, men løbende ændringer vil nu være mulige at detektere.\\ 
+
+Et andet problem er manglen på check af om klodsen bliver samlet op. For den nuværende implementering vil det betyde at når robotten er færdig med udførslen af sin opgave, retunerer den til udgangspunktet og starter forfra. Det betyder at den vil tage et nyt billede og finde den samme klods, som den så vil forsøge at sortere. Dette problem kan løses på flere forskellige måder. Én måde ville være at anvende en sensor, fx. en tryksensor. På den måde vil systemet få feedback på om den bestemte klods er blevet samlet op. En anden måde ville være at kigge på motorerenes belastning. Da en øget belastning på motorerne må betyde at en klods er blevet samlet op.\\
+
+Det er også set under test at billedbehandlingen. Alt afhængigt at farve, at det kan være svære/nemmere at detektere den korrekte farve. Ligeledes er det set at ikke alle klodser blive detekteret. \fixme{Rasmus, noget om hvorfor det kan være at den ikke ser klodsen. lysforhold?}\\
+
+Bedre kameramodel - transformationen mellem billede og bord er ikke lineær.\\
+
+Slør i led og robotten bevæger sig i ryk.
 
 Designvalg
 
