Finished SW Block class description

--- a/Project/Report/sections/Systembeskrivelse/Block.tex
+++ b/Project/Report/sections/Systembeskrivelse/Block.tex
@@ -9,11 +9,11 @@ Denne funktion har til formål at transformere koordinatsættet fra billedet, so
 
 Første del af funktionen står for at oversætte pixelkoordinater til koordinator i cm. Dette er gjort ved at finde antallet af pixels på en cm på billedet og derved dele alle pixel koordinator med dette. \\
 
-Den sidste del består i at transformere billedkoordinatsættet til robotkoordinatsættet. De to koordinatsæt er illustret i \autoref{fig:img2base}, hvor koordinatsættet øverst i venstre side er for billedet og koordinatsættet nederst i midten er for robotten. Som figuren indikerer, kræver denne transformation både translation i x-aksens og y-aksens retning samt en rotation om både x- og z-aksen. \\ 
+Den sidste del består i at transformere billedkoordinatsættet til robotkoordinatsættet. De to koordinatsæt er illustret i \autoref{fig:img2base}, hvor koordinatsættet øverst i venstre side er for billedet og koordinatsættet nederst i midten er for robotten. Som figuren indikerer, kræver denne transformation både translation i x-aksens og y-aksens retning samt en rotation om både x- og z-aksen. \\
 
 \fixme{Ændre 'Figure' til 'Figur'}
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 \includegraphics[scale=0.4]{images/img2base}
 \caption{Billedkoordinatsæt og robotkoordinatsæt i forhold til bord.}
@@ -38,36 +38,34 @@ B = np.matrix([
     ])
 \end{lstlisting}
 
+
+\textbf{img2joint1\_transform} \\
+Denne funktion er en hjælpefunktion, som bruges til at rotere en vektor $[x,y]$ omkring z-aksen. Dette gøres som ved matrix B i \autoref{transformation}. \\
+
+
 \textbf{find\_orientation} \\
-Denne funktion har til formål at bestemme orienteringen på klodsen i forhold til robottens x-akse. Robotten har to orienteringer, da den har to ikke parallelle sider. Dette er illustreret på \autoref{fig:find_orientation}. \\
+Denne funktion har til formål at bestemme orienteringen på klodsen i forhold til robotten. Klodsen har to orienteringer, da den har to ikke parallelle sider. \\
 
-\fixme{Ændre 'Figure' til 'Figur'}
+Fra den tidligere billedprocessering kendes klodsens fire hjørner. Ud fra disse fire hjørner fås to vektorer, som har samme orientering som klodsens to sider. Vinklen mellem hver af disse to vektorer og x-aksen er orienteringen. Vektoren findes ved at trække de to punkter fra hinanden og viklen opnås ved at bruge tangens på $y/x$. Implementationen af dette ses i \autoref{orientation}. \\
 
-\begin{figure}[h]
-\centering
-\includegraphics[scale=0.4]{images/findOrientation}
-\caption{Blokkens orientering i forhold til robottens x-akse.}
-\label{fig:find_orientation}
-\end{figure}
-
-Fra den tidligere billedprocessering kendes klodsens fire hjørner. Ud fra disse fire hjørner fås to vektorer, som har samme orientering som klodsens to sider. Vinklen mellem disse to vektorer og x-aksen er orienteringen. Vektoren findes ved at trække de to punkter fra hinanden og viklen opnås ved at bruge tangens på $y/x$. Implementationen af dette ses i \autoref{orientation}.
+Den sidste detalje er så, at orienteringen ikke skal rejnes ud fra basens x-akse, men i stedet ud fra den x-akse, som følger robottens første rotationsled. Derfor transformeres vektorens koordinater til dette koordinatsystem, som er roteret lige så meget om z-aksen, som robottens første rotationsled, $q1$. Derved kan den beregnede orientation bruges som input til robottens fjerde rotationsled, hvor gripperen er monteret på. \\
 
 \begin{lstlisting}[caption=Funktion til at finde orientering på en klods., label=orientation, language=Python]
-def find_orientations(self, block_corners):
-    thetas = []
+def find_orientation(self, q1):
+    min_theta = 0
 
     for i in range(0, 2):
-        corner1 = self.img2base_transform(block_corners[i][0], block_corners[i][1])
-        corner2 = self.img2base_transform(block_corners[i+1][0], block_corners[i+1][1])
+        corner1 = self.img2joint1_transform(self.corners[i][0], self.corners[i][1], q1)
+        corner2 = self.img2joint1_transform(self.corners[i+1][0], self.corners[i+1][1], q1)
 
         dx = corner2[0] - corner1[0]
         dy = corner2[1] - corner1[1]
 
         theta = atan2(dy, dx)
 
-        thetas.append(theta)
+        if abs(theta) < abs(min_theta) or i == 0:
+            min_theta = theta
 
-    return thetas
+    return min_theta
 \end{lstlisting}
-
 % subsubsection block (end)
