--- a/Project/Report/sections/Systembeskrivelse/Software.tex
+++ b/Project/Report/sections/Systembeskrivelse/Software.tex
@@ -5,8 +5,8 @@
 Systemet består ligeledes af et antal softwarekomponenter. I dette afsnit beskrives de forskellige softwarekomponenter og de vigtigste funktioner i disse. Systemets software er skrevet i programmeringssproget Python. \\
 
 \input{sections/Systembeskrivelse/Vision}
-
 \input{sections/Systembeskrivelse/Block}
+\input{sections/Systembeskrivelse/RosNode}
 
 \input{sections/Systembeskrivelse/Crustcrawler}
 % subsection software (end)
