--- a/Project/Report/preamble.tex
+++ b/Project/Report/preamble.tex
@@ -15,6 +15,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage{listings}
 \usepackage{courier}
+\usepackage{subcaption}
+\usepackage{float}
 
 \lstset{
 basicstyle=\footnotesize\ttfamily,
