--- a/Project/Report/sections/Systembeskrivelse/Vision.tex
+++ b/Project/Report/sections/Systembeskrivelse/Vision.tex
@@ -3,6 +3,98 @@
 Vision systemet består grundlæggende af 4 steps; preprocessering, edge detection, countour detection og til sidst at finde klodserne blandt konturerne. \\
 
 Før udviklingen af vision systemet generede vi et testsæt af billeder og et script til at teste vision systemet på sættet samt at bedømme systemets effektivitet.
-Testsættet bestod af 10 billeder taget under forskellige lysforhold og ud fra dem blev der genereret 100 billeder med ændret brightness, contrast og hue. \\
+Testsættet blev generet ud fra 10 billeder taget under forskellige lysforhold.
+Forskellige lysforhold blev implementeret ved at give kraftig belysning med en lommelygte der gav meget markante skygger på billederne. \\
+Ud fra de 10 billeder blev der genereret eksponentielt flere billeder ved at ændre brightness, contrast og hue.
+Det gav billeder med meget forskellige farver og lysforhold. \\
+På alle billeder var der placeret fire klodser med samme position og rotation.
+Dette gjorde evalueringen af vision systemet næmmere da vi blot skulle tjekke om det fandt alle fire klodser og at de blevet fundet hvor vi havde placeret dem.
+Det betyder dog også at systemet i teorien kan blive for specifik i sin identifikation og ikke ville virke med et andet antal klodser med andre placeringer. \\
 
-\subsubsection{Preprocessering}
+Vision systemet er udviklet igennem trial and error, ved at evaluere systemet på det testsættet af billeder. \\
+
+\subsubsection{Klods identifikation}
+
+Billede behandlingen starter med at et billede fra robotten skæres til, så kun bordpladen er på billedet (Se figur \ref{fig:cropped}).
+Det gøres for at undgå at dele af robotten identificeres som en klods.
+Det betyder også at robotten skal stå det samme sted hver gang vi tager et billede, så robotten holder sig udenfor billedet.
+Vi skjuler også området hvor robotten placer klodserne igennem sorteringen for at robotten ikke begynder at flytte dem igen. \\
+
+Som en ekstra del af preprocesseringen udføres en udglatning af billedet (Se figur \ref{fig:smooth}).
+Det gøres for at fjerne højfrekvente dele af billedet som senere fejlagtigt kunne detekteres som en kant.
+Vi bruger et adaptive bilateral filter til denne udglatning.
+I følge dokumentationen på opencv.org er det godt til at bevare kanter i billedet selvom billedet udglattes. Det er tilgengæld meget beregningstungt, hvilket dog ikke er væsenligt i vores projekt. \\
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[scale=0.3]{images/cropped}
+		\caption{Billede skåret til bordpladen}
+		\label{fig:cropped}
+	\end{subfigure}
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[scale=0.3]{images/smooth}
+		\caption{Udglattet billede}
+		\label{fig:smooth}
+	\end{subfigure}
+	\caption{Preprocessering}
+	\label{fig:preprocessing}
+\end{figure}
+
+
+Nu bruges en canny edge detektor til at finde kanterne i billedet (Se figur \ref{fig:canny}).
+Kanterne er ikke sammenhængende, men blot nogle pixels der er blevet markeret som værende en del af en kant. \\
+
+For at samle disse pixels til en sammenhængende kant bruges en morfologiske transformation (Se figur \ref{fig:close}).
+Closing, der består af dilation efterfulgt af erosion, bruges til at lukke huller imellem pixels. \\
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[scale=0.3]{images/canny}
+		\caption{Resultat af Canny edge detection.}
+	  	\label{fig:canny}
+	\end{subfigure}
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[scale=0.3]{images/closed}
+		\caption{Resultat efter closing.}
+		\label{fig:close}
+	\end{subfigure}
+	\caption{Edge detection}
+	\label{fig:edges}
+\end{figure}
+
+For at finde klodserne ud fra billedet, bruges findContours metoden (Se figur \ref{fig:contours}).
+Den giver en liste af alle konturer og deres hierarki som en træstruktur.
+For at finde klodserne ud fra konturerne er der lavet en rekursiv metode der går træet igennem og finder konturer.
+Når en konturer er identificeret som en klods, søges der ikke dybere i træet.
+Det skyldes at de tykke kanter i billedet kan blive til to konturer, én på ydersiden og én på indersiden.
+Uden at kigge på hierakiet ville en klods blive identificeret to gange eller én gang per kontur. \\
+
+Selve identifikationer af en klods ud fra en kontur, gøres ved at kigge på forskellige egenskaber af konturen (Se figur \ref{fig:blocks}).
+Der kigges på arealet af konturen da vi ved hvilket interval klodsernes areal ligger indenfor.
+Vi kigger også på længden af konturen, da konturen ikke er en perfekt firkant med fire lige sider.
+Til sidst kigger vi på forholdet imellem conturens højde og bredde, da vi ved at alle klodserne set oppe fra er næsten kvadratiske.
+Hvis forholdet er 1 er figuren kvadratisk.
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[scale=0.3]{images/contours}
+		\caption{Konturernes farve beskriver hierakiet.}
+	  	\label{fig:contours}
+	\end{subfigure}
+	\begin{subfigure}{.45\textwidth}
+		\centering
+		\includegraphics[scale=0.3]{images/blocks}
+		\caption{Klodsernes hjørner er markeret.}
+		\label{fig:blocks}
+	\end{subfigure}
+	\caption{Identifikation af klodser ud fra konturer}
+	\label{fig:identification}
+\end{figure}
