Resultat done, minor change to SW/Block

--- a/Project/Report/Master.tex
+++ b/Project/Report/Master.tex
@@ -35,7 +35,7 @@ The Content of this paper seeks to present the knowledge gained throughout the n
 
 \input{sections/Introduktion/Introduktion}
 \input{sections/Systembeskrivelse/Systembeskrivelse}
-\input{sections/Test/Test}
+\input{sections/Resultat/Resultat}
 \input{sections/Diskussion/Diskussion}
 \input{sections/Konklusion/Konklusion}
 
