--- a/Project/Report/sections/Systembeskrivelse/Block.tex
+++ b/Project/Report/sections/Systembeskrivelse/Block.tex
@@ -13,7 +13,7 @@ Den sidste del består i at transformere billedkoordinatsættet til robotkoordin
 
 \fixme{Ændre 'Figure' til 'Figur'}
 
-\begin{figure}[ht]
+\begin{figure}[H]
 \centering
 \includegraphics[scale=0.4]{images/img2base}
 \caption{Billedkoordinatsæt og robotkoordinatsæt i forhold til bord.}
